General changes, API pexels to display videos. Design changes.

--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -16,6 +16,8 @@
     <item
         android:id="@+id/navigation_fragment_five"
         android:title="Settings" />
-
+    <item
+        android:id="@+id/navigation_fragment_six"
+        android:title="Home" />
 
 </menu>
