--- a/app/src/main/res/layout/account_fragment.xml
+++ b/app/src/main/res/layout/account_fragment.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -11,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:layout_marginTop="55dp"
+        android:layout_marginTop="70dp"
         android:text="@string/my_account_title"
         android:textColor="@color/violet"
         android:textSize="40sp"
@@ -23,7 +24,7 @@
         android:id="@+id/imgViewProfilePic"
         android:layout_width="200dp"
         android:layout_height="200dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="17dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtViewMyAccount" />
@@ -32,8 +33,8 @@
         android:id="@+id/txtViewEmailData"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="30dp"
         android:text="@string/editEmailHint"
         android:textColor="@color/violet"
         android:textSize="16sp"
@@ -45,8 +46,9 @@
         android:id="@+id/txtViewEmailDB"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="50dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginStart="85dp"
+        android:layout_marginTop="30dp"
+        android:text="For now"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/txtViewEmailData"
@@ -56,8 +58,8 @@
         android:id="@+id/txtViewFNameData"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="17dp"
         android:text="@string/editFName"
         android:textColor="@color/violet"
         android:textSize="16sp"
@@ -69,8 +71,9 @@
         android:id="@+id/txtViewFNameDB"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="17dp"
+        android:text="For Now"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/txtViewFNameData"
@@ -80,7 +83,7 @@
         android:id="@+id/txtViewLNameData"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="30dp"
         android:layout_marginTop="16dp"
         android:text="@string/editLName"
         android:textColor="@color/violet"
@@ -93,54 +96,31 @@
         android:id="@+id/txtViewLNameDB"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="18dp"
+        android:layout_marginStart="50dp"
         android:layout_marginTop="16dp"
+        android:text="For Now"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/txtViewLNameData"
         app:layout_constraintTop_toBottomOf="@+id/txtViewFNameDB" />
 
-    <TextView
-        android:id="@+id/txtViewPasswordData"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:text="@string/editTxtPassword"
-        android:textColor="@color/violet"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtViewLNameData" />
-
-    <TextView
-        android:id="@+id/txtViewPasswordDB"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="21dp"
-        android:layout_marginTop="16dp"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toEndOf="@+id/txtViewPasswordData"
-        app:layout_constraintTop_toBottomOf="@+id/txtViewLNameDB" />
-
     <Button
         android:id="@+id/btnUpdateProfile"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="45dp"
         android:backgroundTint="@color/violet"
         android:text="@string/btnUpdateProfile"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtViewPasswordDB" />
+        app:layout_constraintTop_toBottomOf="@+id/txtViewLNameDB" />
 
     <ImageView
         android:id="@+id/imgViewLogout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="175dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginStart="160dp"
+        android:layout_marginTop="44dp"
         android:clickable="true"
         android:src="@drawable/nav_logout"
         app:layout_constraintStart_toStartOf="parent"
@@ -150,11 +130,12 @@
         android:id="@+id/txtViewLogoutLegend"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="34dp"
+        android:layout_marginTop="44dp"
+        android:layout_marginEnd="180dp"
+        android:clickable="true"
         android:text="@string/logout_legend"
         android:textColor="@color/violet"
-        android:clickable="true"
-        app:layout_constraintStart_toEndOf="@+id/imgViewLogout"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnUpdateProfile" />
 
 
